
noinst_LIBRARIES   = 	libjoe.a

libjoe_a_SOURCES   =   	ze-oracle-scores.c \
			ze-chkcontent.c \
			ze-connopen.c \
			ze-dbbl.c \
			ze-dbpolicy.c \
			ze-dbrcpt.c \
			ze-entropy.c \
			ze-fileexp.c  \
			ze-databases.c \
			ze-resolve-cache.c \
			ze-grey-cleanup.c \
			ze-grey.c \
			ze-grey-client.c \
			ze-log-grey.c \
			ze-log-regex.c \
			ze-headers.c \
			ze-history.c \
			ze-livehistory.c \
			ze-mailregex.c \
			ze-netclass.c \
			ze-oracle.c \
			ze-policy.c \
			ze-rcpt.c \
			ze-dns-iprbwl.c \
			ze-dns-urlbl.c \
			ze-resource.c \
			ze-smtprate.c \
			ze-stats.c \
			ze-throttle.c \
			mimelist.c \
			scanmail.c \
			ze-read-conf-data.c \
			ze-cf.c \
			ze-log.c \
			ze-proc-witness.c \
		 	ze-config.c \
			ze-rcpt-list.c \
			ze-msg-score.c \
			ze-modules.c 

LDADD                 = @JCHKLIBS@ @LDLIBPCRE@ @BDBLIBS@

AM_CPPFLAGS           = @ZEINCS@ @BDBINCS@


