## Makefile.am -- Process this file with automake to produce Makefile.in
# $Id: Makefile.am,v 1.10 2005/07/04 17:26:53 ca Exp $

MAINTAINERCLEANFILES	= Makefile.in

AM_CPPFLAGS             = -I$(top_builddir) -I$(top_builddir)/include -I$(top_srcdir) -I$(top_srcdir)/include

noinst_LIBRARIES	= librepl.a
librepl_a_SOURCES	= dummyrepl.c

# not yet:		fdwalk.c
