
bin_PROGRAMS              = ze-scanfile j-message-tbx

j_scanfile_SOURCES        = ze-scanfile.c 

j_message_tbx_SOURCES     = ze-message-tbx.c

LDADD                     = @JCHKLIBS@  @LDLIBPCRE@ @BDBLIBS@

AM_CPPFLAGS               = -I../zeinc -I../zmchkinc @BDBINCS@

man_MANS = ze-scanfile.1 

