
noinst_LIBRARIES      = 	libze.a 

libze_a_SOURCES       = 	zeStrings.c \
				zeFileSystem.c \
				zeDb.c \
				zeMap.c
#				ze-linkedlist.c \
#				ze-map.c \
#				ze-syslog.c \
#				ze-divers.c \
#				ze-strings.c \
#				ze-strconvert.c \
#				ze-rdfile.c \
#				strlcpy.c


#LDADD                 = @JCHKLIBS@ @LDLIBPCRE@ @BDBLIBS@

AM_CPPFLAGS           	= -I../zeinc -I../zechkinc @BDBINCS@ 


