
noinst_LIBRARIES      = 	libze.a 

libze_a_SOURCES       = 	zeStrings.c \
				zeStrConvert.c \
				zeFileSystem.c \
				zeDb.c \
				zeMap.c \
				zeSyslog.c \
				zeRdFile.c \
				zeRegex.c
				strlcat.c 
#				ze-linkedlist.c \
#				ze-map.c \
#				ze-syslog.c \
#				ze-divers.c \
#				ze-strings.c \
#				ze-strconvert.c \
#				ze-rdfile.c \
#				strlcpy.c


#LDADD                 = @JCHKLIBS@ @LDLIBPCRE@ @BDBLIBS@

AM_CPPFLAGS           	= -I../zeinc -I../zechkinc @BDBINCS@ 


