
noinst_LIBRARIES      = 	libzm.a 

libzm_a_SOURCES       = 	zmStrings.c \
				zmFileSystem.c \
				zmDb.c \
				zmMap.c
#				zm-linkedlist.c \
#				zm-map.c \
#				zm-syslog.c \
#				zm-divers.c \
#				zm-strings.c \
#				zm-strconvert.c \
#				zm-rdfile.c \
#				strlcpy.c


#LDADD                 = @JCHKLIBS@ @LDLIBPCRE@ @BDBLIBS@

AM_CPPFLAGS           	= -I../zminc -I../zmchkinc @BDBINCS@ 


