
noinst_LIBRARIES      = 	libze.a 

libze_a_SOURCES       = 	zeString.c \
				zeStrings.c \
				zeStrConvert.c \
				zeFileTools.c \
				zeDb.c \
				zeMap.c \
				zeSyslog.c \
				zeRdFile.c \
				zeRegex.c \
				zeDivers.c


#LDADD                 = @JCHKLIBS@ @LDLIBPCRE@ @BDBLIBS@

AM_CPPFLAGS           	= -I../zeinc -I../zechkinc @BDBINCS@ 


