
noinst_LIBRARIES      = 	libze.a 

libze_a_SOURCES       = 	zeString.c \
				zeStrings.c \
				zeStrConvert.c \
				zeFileTools.c \
				zeDb.c \
				zeMap.c \
				zeSyslog.c \
				zeRdFile.c \
				zeRegex.c \
				zeDivers.c \
				zeMD5.c \
				zeSHA1.c \
				zeLinkedList.c \
				ze-btree.c \
				ze-buffer.c \
				ze-inet.c \
				ze-shmem.c \
				ze-table.c \
				ze-time.c \
				kstats.c 



#LDADD                 = @JCHKLIBS@ @LDLIBPCRE@ @BDBLIBS@

AM_CPPFLAGS           	= -I../zeinc -I../zechkinc @BDBINCS@ 


