
noinst_LIBRARIES      = 	libze.a 

libze_a_SOURCES       = 	zeString.c \
				zeStrings.c \
				zeStrConvert.c \
				zeFileTools.c \
				zeDb.c \
				zeMap.c \
				zeSyslog.c \
				zeRdFile.c \
				zeRegex.c \
				zeDivers.c \
				zeMD5.c \
				zeSHA1.c \
				zeLinkedList.c \
				zeBTree.c \
				ze-buffer.c \
				ze-inet.c \
				ze-shmem.c \
				zeTable.c \
				zeTime.c \
				zeKStats.c 



#LDADD                 = @JCHKLIBS@ @LDLIBPCRE@ @BDBLIBS@

AM_CPPFLAGS           	= -I../zeinc -I../zechkinc @BDBINCS@ 


