AM_CPPFLAGS = -I../../@PCREDIR@ -I../../@BDBDIR@ -I../include
AM_LDFLAGS = -module
# LDADD                 = ../../libjoe/libjoe.a @JCHKLIBS@ @LDLIBPCRE@ @BDBLIBS@
#LDADD = ../../libjoe/libjoe.a ../../libs/libcommon.a ../../librepl/librepl.a  ../../pcre-7.0/libpcre.la ../../berkdb/libdb.a

pkglib_LTLIBRARIES = mod_sympa.la
mod_sympa_la_SOURCES = mod_sympa.c
# moddoit_la = -module
